[package]

	name          = "actix-rt"
	version       = "0.2.1"
	authors       = ["Nikolay Kim <fafhrd91@gmail.com>"]
	description   = "Actix runtime"
	keywords      = ["network", "framework", "async", "futures"]
	homepage      = "https://actix.rs"
	repository    = "https://github.com/actix/actix-net.git"
	documentation = "https://docs.rs/actix-rt/"
	categories    = ["network-programming", "asynchronous"]
	license       = "MIT/Apache-2.0"
	exclude       = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
	edition       = "2018"
	workspace     = "../"


[lib]

	name = "actix_rt"
	path = "src/lib.rs"


[features]

	default = [ "tokio" ]
	tokio   = [ "threadpool", "tokio-current-thread", "tokio-executor", "tokio-reactor", "tokio-timer" ]
	wasm    = [ "wasm-bindgen-futures" ]

[dependencies]

	bytes                = "0.4"
	derive_more          = "0.14"
	futures              = "0.1.25"
	parking_lot          = "0.7"
	lazy_static          = "1.2"
	log                  = "0.4"
	num_cpus             = "1.10"

	threadpool           = { version = "1.7"  , optional = true }
	tokio-current-thread = { version = "0.1"  , optional = true }
	tokio-executor       = { version = "0.1.5", optional = true }
	tokio-reactor        = { version = "0.1.7", optional = true }
	tokio-timer          = { version = "0.2.8", optional = true }

	wasm-bindgen-futures = { version = "0.3.15", optional = true }
